--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Home</title>
 
+    <link rel="stylesheet" th:href="@{/home.css}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.2.7/css/all.css"></head>
+<body>
+<div th:replace="_header :: content"></div>
+<div class="row">
+    <div class="col-md-4">
+        <div class="wrapper center-block hidden-xs">
+            <div class="filters-text"> <span class="filter-span">Filters <small>(find product using filters below)</small></span> <span style="float:right;"><i class="fa fa-filter"></i></span> </div>
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading1">
+                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" aria-controls="collapse1"> Processors </a> </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                        <div class="panel-body">
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">CORE i5</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">CORE i7</span> </label> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading2">
+                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2"> Brand </a> </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
+                        <div class="panel-body">
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">APPLE</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">DELL</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">HP</span> </label> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading3">
+                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3"> Screen Size </a> </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
+                        <div class="panel-body">
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">BELOW 12.9 INCH</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">12 INCH - 12.9 INCH</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">13 INCH - 13.9 INCH</span> </label> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading4">
+                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4"> Operating System </a> </h4>
+                    </div>
+                    <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
+                        <div class="panel-body">
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">Windows 7</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">windows 8</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">Windows 10</span> </label> </div>
+                            <div class="checkbox"> <label> <input type="checkbox" class="option-input checkbox" name="filter[]" value="12" /> <span class="ml-10">MAC OS</span> </label> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-right refine"> <button class="btn btn-out btn-primary btn-square" id="button-filter">Refine Search</button> </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-12 mx-auto">
+                    <ul class="list-group shadow">
+                        <li class="list-group-item">
+                            <div class="media align-items-lg-center flex-column flex-lg-row"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1571750338/Ecommerce/Laptop-3.jpg" alt="Generic placeholder image" width="250" height="200" class="order-1 order-lg-1">
+                                <div class="media-body order-2 order-lg-2 ml-lg-5">
+                                    <h5 class="mt-0 mb-1">Acer acreanon laptop with 16GB RAM/ 500GB HDD</h5>
+                                    <div class="product-rating mb-2"> <span class="badge23"><i class="fa fa-star"></i> 4 Star</span> <span class="rating-review mb-1">4 Ratings &amp; 3 Recommendations</span> </div> <span class="product_price price-new">₹ 22,186 </span>
+                                    <hr class="mb-2 mt-1 seperator">
+                                    <div class="d-flex align-items-center justify-content-between mt-1">
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 8th Gen Intel Core i5-8250U processor</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 15.5 Inch | Antiglare Display</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 4GB RAM with Radeon 530 2GB Graphics</li>
+                                        </ul>
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> EMI Starts at 1726. No cost EMI available</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> Warranty: 6 Months Warranty</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> In Stock: 24 units sold this week</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media align-items-lg-center flex-column flex-lg-row"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1571750391/Ecommerce/hp-17-x061nr-white-background.jpg" alt="Generic placeholder image" height="200" width="250" class="order-1 order-lg-1">
+                                <div class="media-body order-2 order-lg-2 ml-lg-5">
+                                    <h5 class="mt-0 mb-1">HP Celeron laptop with 8GB RAM/ 250GB HDD</h5>
+                                    <div class="product-rating mb-2"> <span class="badge23"><i class="fa fa-star"></i> 5 Star</span> <span class="rating-review mb-1">4 Ratings &amp; 6 Recommendations</span> </div> <span class="product_price price-new">₹ 25,186 </span>
+                                    <hr class="mb-2 mt-1 seperator">
+                                    <div class="d-flex align-items-center justify-content-between mt-1">
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 8th Gen Intel Core i5-8250U processor</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 15.5 Inch | Antiglare Display</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 4GB RAM with Radeon 530 2GB Graphics</li>
+                                        </ul>
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> EMI Starts at 1726. No cost EMI available</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> Warranty: 6 Months Warranty</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> In Stock: 24 units sold this week</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media align-items-lg-center flex-column flex-lg-row"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1571750722/Ecommerce/acer-v-17-nitro-realsense.jpg" alt="Generic placeholder image" height="200" width="250" class="order-1 order-lg-1">
+                                <div class="media-body order-2 order-lg-2 ml-lg-5">
+                                    <h5 class="mt-0 mb-1">Acer Modifier laptop with 12GB RAM/ 500GB HDD</h5>
+                                    <div class="product-rating mb-2"> <span class="badge23"><i class="fa fa-star"></i> 4 Star</span> <span class="rating-review mb-1">3.5 Ratings &amp; 8 Recommendations</span> </div> <span class="product_price price-new">₹ 31,000 </span>
+                                    <hr class="mb-2 mt-1 seperator">
+                                    <div class="d-flex align-items-center justify-content-between mt-1">
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 8th Gen Intel Core i5-8250U processor</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 15.5 Inch | Antiglare Display</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 4GB RAM with Radeon 530 2GB Graphics</li>
+                                        </ul>
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> EMI Starts at 1726. No cost EMI available</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> Warranty: 6 Months Warranty</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> In Stock: 24 units sold this week</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media align-items-lg-center flex-column flex-lg-row"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1571750967/Ecommerce/ef192a21ec96.jpg" alt="Generic placeholder image" width="250" height="200" class="order-1 order-lg-1">
+                                <div class="media-body order-2 order-lg-2 ml-lg-5">
+                                    <h5 class="mt-0 mb-1">ASUS Modifier Gaming laptop with 12GB RAM/ 500GB HDD</h5>
+                                    <div class="product-rating mb-2"> <span class="badge23"><i class="fa fa-star"></i> 4 Star</span> <span class="rating-review mb-1">3.9 Ratings &amp; 8 Recommendations</span> </div> <span class="product_price price-new">₹ 41,186 </span>
+                                    <hr class="mb-2 mt-1 seperator">
+                                    <div class="d-flex align-items-center justify-content-between mt-1">
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 8th Gen Intel Core i5-8250U processor</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 15.5 Inch | Antiglare Display</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 4GB RAM with Radeon 530 2GB Graphics</li>
+                                        </ul>
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> EMI Starts at 1726. No cost EMI available</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> Warranty: 6 Months Warranty</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> In Stock: 24 units sold this week</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media align-items-lg-center flex-column flex-lg-row"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1571751108/Ecommerce/laptop-dell-xps-15-computer-monitors-laptops.jpg" alt="Generic placeholder image" width="250" height="200" class="order-1 order-lg-1">
+                                <div class="media-body order-2 order-lg-2 ml-lg-5">
+                                    <h5 class="mt-0 mb-1">XPS Gaming laptop with 12GB RAM/ 500GB HDD / Graphics Card</h5>
+                                    <div class="product-rating mb-2"> <span class="badge23"><i class="fa fa-star"></i> 4 Star</span> <span class="rating-review mb-1">4 Ratings &amp; 3 Recommendations</span> </div> <span class="product_price price-new">₹ 65,000</span>
+                                    <hr class="mb-2 mt-1 seperator">
+                                    <div class="d-flex align-items-center justify-content-between mt-1">
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 8th Gen Intel Core i5-8250U processor</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 15.5 Inch | Antiglare Display</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> 4GB RAM with Radeon 530 2GB Graphics</li>
+                                        </ul>
+                                        <ul class="list-inline small">
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> EMI Starts at 1726. No cost EMI available</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> Warranty: 6 Months Warranty</li>
+                                            <li><img src="https://img.icons8.com/material-outlined/10/000000/filled-circle--v1.png"> In Stock: 24 units sold this week</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
