add opportunity for filter hotels by parameters(add methods in hotel, room services + repository), add SortHotelDto, change html

--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -10,7 +10,7 @@
     <div id="navbarContent" class="collapse navbar-collapse">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
-        <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>Booking Accommodation</strong></a></li>
+        <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRincGo</strong></a></li>
         <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
       </ul>
     </div>
