--- a/src/main/resources/templates/_previewHeader.html
+++ b/src/main/resources/templates/_previewHeader.html
@@ -10,7 +10,7 @@
         <div id="navbarContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a href="/home" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
-                <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>Booking Accommodation</strong></a></li>
+                <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRincGo</strong></a></li>
                 <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
             </ul>
         </div>
@@ -19,7 +19,7 @@
         <div class="container py-4">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h1 class="display-4">Booking Accommodation</h1>
+                    <h1 class="display-4">BoopRincGo</h1>
                 </div>
             </div>
             <div class="row pt-5">
