--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -9,7 +9,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm"> <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none">MegaMenu</a> <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"> <span class="navbar-toggler-icon"></span> </button>
     <div id="navbarContent" class="collapse navbar-collapse">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
+        <li class="nav-item"><a href="/hotel/home" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
         <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRincGo</strong></a></li>
         <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
       </ul>
