--- a/src/main/resources/templates/homeHotel.html
+++ b/src/main/resources/templates/homeHotel.html
@@ -105,38 +105,29 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-12 mx-auto">
-                    <ul class="list-group shadow" th:each="hotel:${hotels}">
+                    <ul class="list-group shadow" th:each="hotel:${hotelList}">
                         <li class="list-group-item">
                             <div class="media align-items-lg-center flex-column flex-lg-row">
-<!--                                <div id="carousel" class="carousel slide" data-ride="carousel">-->
-<!--                                    <div class="carousel-inner" th:each="images:${hotel.imageUrls}">-->
-<!--                                        <div class="carousel-item active">-->
-<!--                                            <img th:src="${images}" alt="Generic placeholder image" width="250" height="200" class="img-fluid order-1 order-lg-1">-->
-<!--                                        </div>-->
-<!--                                        <div class="carousel-item">-->
-<!--                                            <img class="img-fluid" src="..." alt="...">-->
-<!--                                        </div>-->
-<!--                                        <div class="carousel-item">-->
-<!--                                            <img class="img-fluid" src="..." alt="...">-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-
                                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img class="img-fluid order-1 order-lg-1" src="https://wallpapershome.ru/images/wallpapers/tayland-3840x2160-5k-4k-luchshie-plyaji-luchshie-oteli-659.jpg" alt="First slide" width="250px" height="200px">
+                                            <img class="img-fluid order-1 order-lg-1"
+                                                 src="https://wallpapershome.ru/images/wallpapers/tayland-3840x2160-5k-4k-luchshie-plyaji-luchshie-oteli-659.jpg"
+                                                 alt="First slide" width="250px" height="200px">
                                         </div>
                                         <div class="carousel-item" th:each="photo : ${hotel.imageUrls}">
-                                            <img class="img-fluid order-1 order-lg-1" th:src="${photo}" alt="Second slide"  style="width:250px; height:200px">
+                                            <img class="img-fluid order-1 order-lg-1" th:src="${photo}"
+                                                 alt="Second slide" style="width:250px; height:200px">
                                         </div>
 
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                       data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                       data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
                                     </a>
@@ -144,7 +135,7 @@
 
 
                                 <div class="media-body order-2 order-lg-2 ml-lg-5">
-                                    <h5 class="mt-0 mb-1">Acer acreanon laptop with 16GB RAM/ 500GB HDD</h5>
+                                    <h5 class="mt-0 mb-1" th:text="${hotel.name}"></h5>
                                     <div class="product-rating mb-2">
                                         <span class="badge23"><i class="fa fa-star"></i> 4 Star</span>
                                         <span class="rating-review mb-1">4 Ratings &amp; 3 Recommendations</span>
@@ -191,26 +182,53 @@
     </div>
 </div>
 
-<nav aria-label="...">
-    <ul class="pagination justify-content-center">
+<div th:if="${totalPages > 1}">
+    <nav>
+        <ul class="pagination justify-content-center flex-wrap">
+            <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                <a th:href="@{/hotel/home/{page}(page=${currentPage - 1})}" class="page-link"> Previous </a>
+            </li>
 
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item active" aria-current="page">
-            <span class="page-link">2</span>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+            <th:block th:if="${totalPages <= 10}">
+                <li th:each="i : ${#numbers.sequence(1, totalPages)}"
+                    th:class="${currentPage != i ? 'page-item' : 'page-item disable'}">
+                    <a th:href="@{/hotel/home/{page}(page=${i})}" class="page-link">[[${i}]]</a>
+                </li>
+            </th:block>
+
+            <th:block th:if="${totalPages > 10}">
+                <th:block th:if="${currentPage <= 5 || currentPage >= totalPages - 4}">
+                    <li th:each="i : ${#numbers.sequence(1, 5)}"
+                        th:class="${currentPage != i ? 'page-item' : 'page-item disable'}">
+                        <a th:href="@{/hotel/home/{page}(page=${i})}" class="page-link">[[${i}]]</a>
+                    </li>
+
+                    <a th:href="@{/hotel/home/6}" class="page-link">...</a>
+
+                    <li th:each="i : ${#numbers.sequence(totalPages - 4, totalPages)}"
+                        th:class="${currentPage != i ? 'page-item' : 'page-item disable'}">
+                        <a th:href="@{/hotel/home/{page}(page=${i})}" class="page-link">[[${i}]]</a>
+                    </li>
+                </th:block>
+
+                <th:block th:if="${currentPage > 5 && currentPage < totalPages - 4}">
+                    <a th:href="@{/hotel/home/{page}(page=${currentPage - 5})}" class="page-link">...</a>
+
+                    <li th:each="i : ${#numbers.sequence(currentPage - 4, currentPage + 4)}"
+                        th:class="${currentPage != i ? 'page-item' : 'page-item disable'}">
+                        <a th:href="@{/hotel/home/{page}(page=${i})}" class="page-link">[[${i}]]</a>
+                    </li>
+
+                    <a th:href="@{/hotel/home/{page}(page=${currentPage + 5})}" class="page-link">...</a>
+                </th:block>
+            </th:block>
+
+            <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                <a th:href="@{/hotel/home/{page}(page=${currentPage + 1})}" class="page-link"> Next </a>
+            </li>
+        </ul>
+    </nav>
+</div>
 </body>
 </html>
 
