--- a/src/main/resources/templates/user/authorization.html
+++ b/src/main/resources/templates/user/authorization.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Authorization</title>
+    <link rel="stylesheet" th:href="@{/authNReg.css}">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            $('.input').focus(function () {
+                $(this).parent().find(".label-txt").addClass('label-active');
+            });
+
+            $(".input").focusout(function () {
+                if ($(this).val() == '') {
+                    $(this).parent().find(".label-txt").removeClass('label-active');
+                }
+                ;
+            });
+
+        });
+    </script>
 </head>
 <body>
+<div th:replace="_header :: content"></div>
+<form th:action="@{/user/authorization}" th:object="${authUser}" method="post">
+    <div class="row">
+        <label style="margin-left: 120px">
+            <p class="label-txt">ENTER YOUR EMAIL</p>
+            <input type="email" class="input" th:field="*{email}">
+            <div class="line-box">
+                <div class="line"></div>
+            </div>
+            <div class="form-text">
+                <p th:if="${#fields.hasErrors('email')}" style="color: red" th:errors="*{email}"></p>
+            </div>
+        </label>
+        <label style="margin-left: 30px">
+            <p class="label-txt">ENTER YOUR PASSWORD</p>
+            <input type="password" class="input" th:field="*{password}">
+            <div class="line-box">
+                <div class="line"></div>
+            </div>
+            <div class="form-text">
+                <p th:if="${#fields.hasErrors('password')}" style="color: red" th:errors="*{password}"></p>
+            </div>
+        </label>
+    </div>
+    <button type="submit" style="margin-top: 10px">submit</button>
+    <div class="row justify-content-center mt-4 ms-3">
+        <div class="col-sm-5 ms-4 mt-3">
+            <p>You don't have an account yet? <a th:href="@{/user/registration}">Create account</a></p>
+        </div>
+    </div>
+</form>
 
 </body>
 </html>
