--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -17,7 +17,9 @@
                 <div class="card-header">Profile Picture</div>
                 <div class="card-body text-center">
                     <!-- Profile picture image-->
-                    <img class="img-account-profile rounded-circle mb-2"
+                    <img th:if="${user.imageUrl == null}" class="img-account-profile rounded-circle mb-2"
+                         src="https://www.computerhope.com/jargon/g/guest-user.jpg">
+                    <img th:if="${user.imageUrl != null}" class="img-account-profile rounded-circle mb-2"
                          th:src="${user.imageUrl}">
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
@@ -25,15 +27,24 @@
                     <button class="btn btn-primary" type="button">Upload new image</button>
                 </div>
             </div>
-            <p th:if="${completeMessage == true}" class="alert alert-info alert-dismissible">Success update!</p>
+            <p th:if="${completeMessage == true}" class="alert alert-info alert-dismissible center" align="center">
+            Success update!
+            </p>
         </div>
         <div class="col-xl-8">
             <!-- Account details card-->
             <div class="card mb-4">
-                <div class="card-header">Account Details</div>
+                <div class="card-header">
+                    <form class="form-horizontal" action="#" th:action="@{/user/logout}" th:method="post">
+                        Account Details
+                        <button class="btn btn-outline-info" role="button" style="margin-left: 725px"
+                                aria-pressed="true">Logout
+                        </button>
+                    </form>
+                </div>
                 <div class="card-body">
                     <form class="form-horizontal" action="#" th:action="@{/user/update}" th:object="${user}"
-                          th:method="put">
+                          th:method="post">
                         <!-- Form Group (username)-->
                         <div class="mb-3">
                             <label class="small mb-1" for="inputEmailAddress">Email address
@@ -103,7 +114,7 @@
                             </div>
                         </div>
                         <!-- Save changes button-->
-                        <button class="btn btn-primary" type="button">Save changes</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
                     </form>
                 </div>
             </div>
