--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm"> <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none">MegaMenu</a> <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"> <span class="navbar-toggler-icon"></span> </button>
     <div id="navbarContent" class="collapse navbar-collapse">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a th:href="@{/hotel/home}" class="nav-link  text-uppercase">Hotels</a></li>
+        <li class="nav-item"><a th:href="@{/home/}" class="nav-link  text-uppercase">Hotels</a></li>
         <li class="nav-item"><a href="/" class="nav-link  font-weight-bold text-uppercase" >BoopRinc</a></li>
         <li class="nav-item" th:if="${session.user == null}"><a href="/user/authorization" class="nav-link text-uppercase">Auth</a></li>
         <li class="nav-item" th:if="${session.user != null}"><a href="/user/profile" class="nav-link text-uppercase">Profile</a></li>
