--- a/src/main/resources/templates/booking/reserve.html
+++ b/src/main/resources/templates/booking/reserve.html
@@ -3,8 +3,264 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/home.css}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div th:replace="_header :: content"></div>
+<!--<div class="row" style="max-width: 1519px">-->
+<!--    <div class="col-md-3">-->
+<!--        <div class="wrapper center-block hidden-xs">-->
+<!--            <div class="alert alert-warning alert-dismissible fade show" role="alert" th:if="${hotelsNotFound != null}"-->
+<!--                 th:text="${hotelsNotFound}">-->
+<!--                <button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--                    <span aria-hidden="true">&times;</span>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--            <form>-->
+<!--                <div class="form-group">-->
+<!--                    <input type="date" class="form-control">-->
+<!--                </div>-->
+<!--                <div class="form-group">-->
+<!--                    <input type="date" class="form-control">-->
+<!--                </div>-->
+<!--            </form>-->
+<!--            <form action="#" th:action="@{/hotel/filter}" th:object="${filterHotels}" th:method="post">-->
+<!--                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading1">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse1" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse1"> Cost (min) </a>-->
+<!--                            </h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="forms-inputs mb-4">-->
+<!--                                    <input class="form-control" th:field="*{cost}" type="text">-->
+<!--                                </div>-->
+<!--                                <div class="form-text">-->
+<!--                                    <p th:if="${#fields.hasErrors('cost')}" style="color: red" th:errors="*{cost}"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading2">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse2" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse1"> Rating (min) </a>-->
+<!--                            </h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="rating" value="1"-->
+<!--                                           id="flexRadioDefault1">-->
+<!--                                    <label class="form-check-label" for="flexRadioDefault1">1</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="rating" value="2"-->
+<!--                                           id="flexRadioDefault2">-->
+<!--                                    <label class="form-check-label" for="flexRadioDefault2">2</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="rating" value="3"-->
+<!--                                           id="flexRadioDefault3">-->
+<!--                                    <label class="form-check-label" for="flexRadioDefault3">3</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="rating" value="4"-->
+<!--                                           id="flexRadioDefault4">-->
+<!--                                    <label class="form-check-label" for="flexRadioDefault4">4</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="rating" value="5"-->
+<!--                                           id="flexRadioDefault5">-->
+<!--                                    <label class="form-check-label" for="flexRadioDefault5">5</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading3">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse3" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse1"> Type of room </a>-->
+<!--                            </h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="type" value="single"-->
+<!--                                           id="flexRadio1">-->
+<!--                                    <label class="form-check-label" for="flexRadio1">Single(SGL)</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="type" value="double"-->
+<!--                                           id="flexRadio2">-->
+<!--                                    <label class="form-check-label" for="flexRadio2">Double(DBL)</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="type" value="triple"-->
+<!--                                           id="flexRadio3">-->
+<!--                                    <label class="form-check-label" for="flexRadio3">Triple(TRPL)</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading4">-->
+<!--                            <h4 class="panel-title">-->
+<!--                                <a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                   data-parent="#accordion" href="#collapse5" aria-expanded="false"-->
+<!--                                   aria-controls="collapse1"> Number of beds</a>-->
+<!--                            </h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="forms-inputs mb-4">-->
+<!--                                    <input class="form-control" th:field="*{numberOfBeds}" type="text">-->
+<!--                                </div>-->
+<!--                                <div class="form-text">-->
+<!--                                    <p th:if="${#fields.hasErrors('numberOfBeds')}" style="color: red"-->
+<!--                                       th:errors="*{numberOfBeds}"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading5">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse5" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse5"> Conditioner </a></h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="conditioner" value="true"-->
+<!--                                           id="flexRadio5">-->
+<!--                                    <label class="form-check-label" for="flexRadio5">Available</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="conditioner" value="false"-->
+<!--                                           id="flexRadio6">-->
+<!--                                    <label class="form-check-label" for="flexRadio6">Absent</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading6">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse6" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse6"> TV </a></h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="TV" value="true"-->
+<!--                                           id="flexRad1">-->
+<!--                                    <label class="form-check-label" for="flexRad1">Available</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="TV" value="false"-->
+<!--                                           id="flexRad2">-->
+<!--                                    <label class="form-check-label" for="flexRad2">Absent</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading7">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse7" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse7"> Internet </a></h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="internet" value="true"-->
+<!--                                           id="flexRad5">-->
+<!--                                    <label class="form-check-label" for="flexRad5">Available</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="internet" value="false"-->
+<!--                                           id="flexRad6">-->
+<!--                                    <label class="form-check-label" for="flexRad6">Absent</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="panel panel-default">-->
+<!--                        <div class="panel-heading" role="tab" id="heading8">-->
+<!--                            <h4 class="panel-title"><a class="collapsed" role="button" data-toggle="collapse"-->
+<!--                                                       data-parent="#accordion" href="#collapse8" aria-expanded="false"-->
+<!--                                                       aria-controls="collapse8"> Mini bar </a></h4>-->
+<!--                        </div>-->
+<!--                        <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">-->
+<!--                            <div class="panel-body">-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="miniBar" value="true"-->
+<!--                                           id="flexRad7">-->
+<!--                                    <label class="form-check-label" for="flexRad7">Available</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-check">-->
+<!--                                    <input class="form-check-input" type="radio" name="miniBar" value="false"-->
+<!--                                           id="flexRad8">-->
+<!--                                    <label class="form-check-label" for="flexRad8">Absent</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="text-right refine">-->
+<!--                    <button class="btn btn-out btn-primary btn-square" id="button-filter">Refine Search</button>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-md-8">-->
+<!--        <div class="container py-5">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-12 mx-auto">-->
+<!--                    <ul class="list-group shadow">-->
+<!--                        <li class="list-group-item">-->
+<!--                            <div class="media align-items-lg-center flex-column flex-lg-row">-->
+<!--                                <a th:href="@{/hotel/{hotelId}(hotelId = ${hotel.id})}">-->
+<!--                                    <img th:src="${hotel.getFirstPhoto()}"-->
+<!--                                         alt="Generic placeholder image" width="250" height="200"-->
+<!--                                         class="order-1 order-lg-1">-->
+<!--                                </a>-->
+<!--                                <div class="media-body order-2 order-lg-2 ml-lg-5">-->
+<!--                                    <a th:href="@{/hotel/{hotelId}(hotelId = ${hotel.id})}">-->
+<!--                                        <h5 class="mt-0 mb-1" th:text="${hotel.name}"></h5>-->
+<!--                                    </a>-->
+<!--                                    <div class="product-rating mb-2">-->
+<!--                                            <span class="badge23"><i-->
+<!--                                                    class="bi bi-star-fill"></i>[[${hotel.rating}]]</span>-->
+<!--                                        <span class="rating-review mb-1" th:text="${hotel.rating} + ' Ratings'"></span>-->
+<!--                                    </div>-->
+<!--                                    <span class="product_price price-new" th:text="${costs.get(hotel.id)}"></span>-->
+<!--                                    <hr class="mb-2 mt-1 seperator">-->
+<!--                                    <div class="d-flex align-items-center justify-content-between mt-1">-->
+<!--                                        <ul class="list-inline small">-->
+<!--                                            <li th:text="'country: ' + ${hotel.country}"></li>-->
+<!--                                            <li th:text="'city: ' + ${hotel.city}"></li>-->
+<!--                                            <li th:text="'street: ' + ${hotel.street}"></li>-->
+<!--                                        </ul>-->
+<!--                                        <ul class="list-inline small">-->
+<!--                                            <li th:text="'number home: ' + ${hotel.home}"></li>-->
+<!--                                            <li th:text="'telephone: ' + ${hotel.phoneNumber}"></li></ul>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 </html>
