--- a/src/main/resources/templates/hotel/personal.html
+++ b/src/main/resources/templates/hotel/personal.html
@@ -104,7 +104,7 @@
                     <span class="ml-1" th:text="${hotel.rating}"></span>
                 </div>
                 <div class="about"><span class="font-weight-bold"> [[${hotel.name}]]</span>
-                    <h4 class="font-weight-bold">[[${rooms.get(0).cost}]]</h4>
+                    <h4 class="font-weight-bold" th:if="${datePeriod.checkInDate != null and datePeriod.checkOutDate != null}">[[${rooms.get(0).cost}]]</h4>
                 </div>
                 <hr>
                 <div class="product-description">
@@ -141,24 +141,29 @@
             </div>
             <div class="card mt-2">
                 <div class="row">
-                    <form action="#" th:action="@{}"
-                    <div class="col-sm-6">
-                        <div class="form-group pmd-textfield pmd-textfield-floating-label">
+                    <form action="#" th:action="@{'/hotel/' + ${hotel.id} + '/setDate'}" style="position: relative;
+                                                                                                          display: flex;
+                                                                                                          flex-wrap: nowrap;
+                                                                                                          justify-content: space-between;
+                                                                                                          align-items: center;"
+                         th:object="${datePeriod}" th:method="post">
+                        <div class="col-sm-10">
                             <label class="control-label" for="datepicker-start">Start Date</label>
-                            <input type="date" id="datepicker-start" class="form-control">
+                            <input type="date" id="datepicker-start" class="form-control" name="checkInDate" th:field="*{checkInDate}">
                         </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="form-group pmd-textfield pmd-textfield-floating-label">
-                            <label class="control-label" for="datepicker-end">End Date</label>
-                            <input type="date" id="datepicker-end" class="form-control">
+                        <div class="col-sm-10">
+                            <label class="control-label" for="datepicker-end" >End Date</label>
+                            <input type="date" id="datepicker-end" class="form-control" name="checkOutDate" th:field="*{checkOutDate}">
                         </div>
-                    </div>
+                        <div class="text-right refine">
+                            <button class="btn btn-out btn-primary btn-square" id="button-date" style="margin-top: 32px">Search</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="card mt-2"><span class="font-weight-bold">Rooms</span>
                 <div class="similar-products mt-2 d-flex flex-row">
-                    <table class="table">
+                    <table class="table" th:if="${session.datePeriod != null}">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Type</th>
@@ -173,12 +178,11 @@
                             <td th:text="${room.numberOfBeds}"></td>
                             <td th:text="${room.cost}"></td>
                             <td>
-                                <a th:href="@{'/user/order/' + ${hotel.id} + '/' + ${room.id}}"
+                                <a th:href="@{'/booking/' + ${hotel.id} + '/' + ${room.id}}"
                                    class="btn btn-outline-secondary" role="button"
                                    aria-pressed="true">Order</a>
                             </td>
                         </tr>
-
                         </tbody>
                     </table>
                 </div>
